--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,8 @@
   --dark-gray: #56524e;
   --dark-olive-green: #3E3F30;
   --charcoal-gray: #45423f;
+  --charcoal-blue: #263238;
+  --royal-blue: #31409A;
 
     /* product colors */
     --product-navy-blue: #12457e;
