--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,4 @@
+/* stylelint-disable no-descending-specificity */
 footer {
   background-color: var(--light-color);
   font-size: var(--body-font-size-xs);
