--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -43,23 +43,28 @@ header nav {
   width: 100%;
 }
 
-header nav.breadcrumbs {
-  width: 100%;
-  height: 50px;
-  position: relative;
-  background-color: var(--red);
-  color: white;
-  font-size: var(--body-font-size-xxs);
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 6px;
-  justify-content: left;
+header .breadcrumbs-outer {
 
-  a {
+  .breadcrumbs-container {
+    margin: unset;
+  }
+
+  nav.breadcrumbs {
     color: white;
-    font-weight: 700;
+    font-size: var(--body-font-size-xxs);
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 6px;
+    justify-content: left;
+    height: 50px;
+
+    a {
+      color: white;
+      font-weight: 700;
+    }
   }
 }
+
 
 header .nav-brand {
   width: 200px;
@@ -69,7 +74,7 @@ header .nav-brand {
 }
 
 header .nav-brand * {
-  height: 100%;
+  height: 30px;
 }
 
 header .nav-sections {
