--- a/templates/research-detail/research-detail.css
+++ b/templates/research-detail/research-detail.css
@@ -1,57 +1,83 @@
 .research-detail main {
-    .section-outer > .section {
-        padding: 24px 15px;
+    .section-outer {
+        margin: unset;
+
+        > .section {
+            padding: 0 15px;
+        }
+
+        &:last-of-type .default-content-wrapper {
+            text-align: center;
+        }
+
+        h2 {
+            color: inherit;
+            font-size: var(--body-font-size-m);
+            font-weight: var(--font-weight-medium);
+            text-transform: none;
+            font-family: var(--body-font-family);
+        }
     }
 
-    .section-outer:last-of-type .default-content-wrapper {
-        text-align: center;
-    }
-
-    h2  {
-        color: inherit;
-        font-size: var(--body-font-size-m);
-        font-weight: var(--font-weight-medium);
-        text-transform: none;
-        font-family: var(--body-font-family);
+    .breadcrumbs-container {
+    padding-right: 15px;
+    padding-left: 15px;
     }
 }
 
 @media (width >= 768px) {
-    .research-detail main {
+    .research-detail main .section-outer .section, .breadcrumbs-container {
         max-width: 750px;
         margin-left: auto;
         margin-right: auto;
     }
 }
 
-@media (width >= 992px) {
+@media (width >= 1024px) {
     .research-detail main {
         display: grid;
-        grid-template-columns: 61% 36%;
         grid-template-areas:
+        "breadcrumb breadcrumb"
         "content sidebar";
-        gap: 40px;
-        max-width: 970px;
+        column-gap: 40px;
         position: relative;
+        max-width: unset;
 
         .section-outer:not(last-of-type) {
             grid-area: auto / content;
+            max-width: 610px;
+            justify-self: end;
         }
 
         .section-outer:last-of-type {
             grid-area: sidebar;
             grid-column-start: 2;
-            grid-row: 1 / -1;
-            margin-top: 100px;
-            padding-right: 25px;
-            height: 100%;
+            grid-row: 2 / -1;
+            margin-top: 50px;
             display: flex;
+            max-width: 320px;
+            justify-self: start;
+        }
+
+        .breadcrumbs-container {
+            max-width: 970px;
         }
     }
 }
 
 @media (width >= 1200px) {
     .research-detail main {
-        max-width: 1170px;
+        .breadcrumbs-container {
+            max-width: 1170px;
+        }
+
+        .section-outer:not(last-of-type) {
+            max-width: 760px;
+        }
+
+        .section-outer:last-of-type {
+            max-width: 380px;
+        }
     }
+
 }
