--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,6 +64,7 @@
   --charcoal-gray: #45423f;
   --charcoal-blue: #263238;
   --royal-blue: #31409A;
+  --maroon: #77001a;
 
     /* product colors */
     --product-navy-blue: #12457e;
