--- a/blocks/research-filter/research-filter.css
+++ b/blocks/research-filter/research-filter.css
@@ -5,11 +5,12 @@
     color: inherit;
     margin-bottom: 10px;
     text-transform: none;
+    padding: 0 10px;
 }
 
 .research-filter hr{
-    margin: 20px 0;
-    border-top: 1px solid var(--light-grey);;
+    margin: 20px 10px;
+    border-top: 1px solid var(--light-grey);
 }
 
 .research-filter .cards-wrapper{
