move breadcrumb css to styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -443,6 +443,8 @@ nav li {
 
   .breadcrumbs-container {
     margin: 0 auto;
+      padding-right: 15px;
+      padding-left: 15px;
   }
 
   nav.breadcrumbs {
@@ -596,14 +598,14 @@ body.yellow {
     }
   }
 
-  @media (width >= 992px) {
-    main > .section-outer > .section {
+  @media (width >= 1024px) {
+    main > .section-outer > .section, .breadcrumbs-container {
       max-width: 970px;
     }
   }
 
   @media (width >= 1200px) {
-    main > .section-outer > .section {
+    main > .section-outer > .section, .breadcrumbs-container {
       max-width: 1170px;
     }
   }
