author template layout

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -619,6 +619,12 @@ body.yellow {
     }
   }
 
+@media (width >= 1660px) {
+  .breadcrumbs-container {
+    max-width: 1527px;
+  }
+}
+
   /* section metadata */
   main .section.light,
   main .section.highlight {
